syntax="proto3";

package users;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/johanbrandhorst/grpc-postgres/proto;users";

service UserService {
    rpc AddUser(AddUserRequest) returns (User) {}
    rpc GetUser(GetUserRequest) returns (User) {}
    rpc DeleteUser(DeleteUserRequest) returns (User) {}
    rpc ListUsers(ListUsersRequest) returns (stream User) {}
}

enum Role {
    GUEST = 0;
    MEMBER = 1;
    ADMIN = 2;
}

message User {
    string id = 1;
    Role role = 2;
    google.protobuf.Timestamp create_time = 3;
}

message UserRole {
    Role role = 1;
}

message AddUserRequest {
    Role role = 1;
}

message GetUserRequest {
    string id = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message ListUsersRequest {
    // Only list users created after this timestamp
    google.protobuf.Timestamp created_since = 1;
    // Only list users older than this Duration
    google.protobuf.Duration older_than = 2;
}
